[package]
name = "terrars-hectorj-googlesiteverification"
edition = "2021"
version = "0.1.0"
description = "Pre-generated Terrars Google Site Verification bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-hectorj-googlesiteverification"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.7"

[features]
data_dns_token = []
dns = []
